demo/egress-gateways/egw.policies.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: security.egw-netshoot
  namespace: dev
spec:
  tier: security
  order: 100
  selector: app == "netshoot"
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        ports:
          - '80'
    - action: Allow
      protocol: ICMP
      source: {}
      destination: {}
  types:
    - Egress

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: security.egw-frontend
  namespace: bt-web
spec:
  tier: security
  order: 150
  selector: app == "frontend"
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == "bt-web-egress"
      destination:
        ports:
          - '80'
    - action: Allow
      protocol: ICMP
      source: {}
      destination: {}
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        namespaceSelector: projectcalico.org/name == "bt-web-egress"
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        ports:
          - '80'
  types:
    - Ingress
    - Egress
